Bug 498783 - "Places panel Item" and "Custom location" settings are broken
Summary: "Places panel Item" and "Custom location" settings are broken
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 6.2.90
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-01-17 08:44 UTC by Vadym Krevs
Modified: 2025-01-18 00:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vadym Krevs 2025-01-17 08:44:40 UTC
SUMMARY


STEPS TO REPRODUCE
1. Add a Folder View widget to your desktop. 
2. Open its properties and attempt to change the "Show" setting to "Custom location" and open a dialog to select a directory. Select anything except ~/Desktop there.
3. Attempt to add a second Folder view widget.

OBSERVED RESULT
Both created folder view widgets are called  "One Plus 11 5g -> home/<username>/Desktop Settings". What does my mobile's model (which is only registered in/knows to KDE Connect!!!) have to do with folder view widgets ???

The custom location is impossible to set. The folder selected in the dialog does not appear under custom location (it remains empty, manually typing anything into the custom location does not trigger the "Apply" button to become active and clicking OK does not save the selected custom location.

EXPECTED RESULT
* One can add as many folder widgets as they want. 
* One can set the locations of these folder widgets to anything other than ~/Desktop
* The auto-generated names of added folder widgets should not start with some strings pulled out of KDE Connect.


SOFTWARE/OS VERSIONS
Operating System: openSUSE Leap 15.6
KDE Plasma Version: 6.2.90
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1
Kernel Version: 6.4.0-150600.23.30-default (64-bit)
Graphics Platform: X11
Processors: 32 × AMD Ryzen 9 5950X 16-Core Processor
Memory: 125.7 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 4060 Ti
Manufacturer: ASUS
Comment 1 Vadym Krevs 2025-01-17 08:45:28 UTC
This appears to be a regression after upgrading to 6.3 beta from 6.2.x.
Comment 2 Nate Graham 2025-01-17 15:58:56 UTC
Can confirm those location settings being broken; I'll take a look.

As the the incorrect title that shows the name of your phone, that's Bug 494430.
Comment 3 Nate Graham 2025-01-17 19:53:49 UTC
The problem here seems to be that all the `Folder.DesktopSchemeHelper.getDesktopUrl()` function calls are broken when invoked from QML:

> TypeError: Cannot call method 'getDesktopUrl' of undefined
Comment 4 Bug Janitor Service 2025-01-17 20:18:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2731
Comment 5 Nate Graham 2025-01-17 20:58:59 UTC
Git commit bfa8a302a78dc31b905a6a116331b937547e825c by Nate Graham.
Committed on 17/01/2025 at 20:46.
Pushed by ngraham into branch 'master'.

Fix DesktopSchemeHelper's QML singleton-ness

After some refactoring in c116c00d0bfa4de9095b327d09a6cd0664bb256d,
the object had lost its ability to be accessed from QML and its
singleton-ness.

Fixing that fixes these issues in Folder View:
1. Places and Custom location options not working
2. Drill-down folder popup not working
FIXED-IN: 6.3.0

M  +3    -0    containments/desktop/plugins/folder/desktopschemehelper.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/bfa8a302a78dc31b905a6a116331b937547e825c
Comment 6 Nate Graham 2025-01-18 00:55:33 UTC
Git commit 80a9600751a97948b961675ad756f145a0688fa4 by Nate Graham.
Committed on 17/01/2025 at 22:33.
Pushed by ngraham into branch 'Plasma/6.3'.

Fix DesktopSchemeHelper's QML singleton-ness

After some refactoring in c116c00d0bfa4de9095b327d09a6cd0664bb256d,
the object had lost its ability to be accessed from QML and its
singleton-ness.

Fixing that fixes these issues in Folder View:
1. Places and Custom location options not working
2. Drill-down folder popup not working
FIXED-IN: 6.3.0


(cherry picked from commit bfa8a302a78dc31b905a6a116331b937547e825c)

Co-authored-by: Nate Graham <nate@kde.org>

M  +3    -0    containments/desktop/plugins/folder/desktopschemehelper.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/80a9600751a97948b961675ad756f145a0688fa4