Fix DesktopSchemeHelper's QML singleton-ness

After some refactoring in c116c00d0bfa4de9095b327d09a6cd0664bb256d,
the object had lost its ability to be accessed from QML and its
singleton-ness.

Fixing that fixes these issues in Folder View:
1. Places and Custom location options not working
2. Drill-down folder popup not working

BUG: 498783
FIXED-IN: 6.3.0


(cherry picked from commit bfa8a302a78dc31b905a6a116331b937547e825c)

Co-authored-by: Nate Graham <nate@kde.org>